--- a/happy.html
+++ b/happy.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sad Movies - FEELMS</title>
+    <title>Happy Films - FEELMS</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <section>
     <header>
-        <h1>Films for when you want to feel sad.</h1>
-        <p>Often categorized as dramas or tragedies, are films that evoke deep emotions such as sorrow, heartbreak, nostalgia, or grief. They typically explore themes of love and loss, human struggles, personal sacrifices, or tragic circumstances. These movies often have emotionally powerful storytelling, compelling character arcs, and poignant soundtracks that enhance their impact.</p>
+        <h1>Films for when you want to feel happy.</h1>
+        <p>Happy movies are uplifting, feel-good films that leave audiences with a sense of joy, warmth, and positivity. These movies often feature heartwarming stories, lovable characters, and themes of love, friendship, personal growth, or overcoming challenges. They may include lighthearted comedies, animated adventures, inspiring dramas, or romantic tales with happy endings. The vibrant cinematography, cheerful music, and engaging dialogue in these films contribute to their uplifting nature.</p>
     </header>
 
     <div class="swiper-container">
@@ -33,7 +33,7 @@
     
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="sad.js"></script>
+    <script src="happy.js"></script>
 
 </body>
 </html>
