--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOODVIE - home</title>
+    <title>FEELMS - home</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <section>
         <div class="header">
-            <h1>MOODVIE</h1>
-            <p>movies by mood</p>
+            <h1>FEELMS</h1>
+            <p>films by feels</p>
         </div>
 
         <div class="dropdown">
@@ -23,7 +23,7 @@
         </div>
 
         <div class="content" id="content">
-            <p>Welcome to MOODVIE!</p>
+            <p>Welcome to FEELMS!</p>
         </div>
     </section>
 
