--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOODVIE - movies by mood</title>
+    <title>FEELMS - films by feels</title>
     
     <link rel="stylesheet" href="landing.css">
 </head>
 <body>
     <div class="header">
         <a href="home.html">
-            <h1>MOODVIE</h1>
-            <p>movies by mood</p>
+            <h1>FEELMS</h1>
+            <p>films by feels</p>
         </a>
     </div>
     
