--- a/sad.html
+++ b/sad.html
@@ -28,6 +28,20 @@
     <div class="movieinfo">
         <p>Click on a movie to see its description.</p>
     </div>
+
+    <label for="region">Select Region:</label>
+        <select id="region">
+            <option value="AU">Australia</option>
+            <option value="CA">Canada</option>
+            <option value="FR">France</option>
+            <option value="DE">Germany</option>
+            <option value="ID">Indonesia</option>
+            <option value="PH">Philippines</option>
+            <option value="GB">United Kingdom</option>
+            <option value="US">United States</option>
+        </select>
+    </section>
+    
     </div>
     </section>
     
