--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="main">
         <h2>I want to feel...</h2>
         <select id="mood-select">
+            <option value="empty">Empty</option>
             <option value="happy">Happy</option>
             <option value="sad">Sad</option>
             <option value="scared">Scared</option>
